2007-02-14  Ludwig Reiter  <ludwig.reiter@intevation.de>

	small bugfixes.

	* src/de/intevation/printlayout/LayoutFrame.java:
		added accelerator key to the info dialog.

	* src/de/intevation/printlayout/resources/info.html,
	  src/de/intevation/printlayout/resources/info_de.html:
		rewrited the texts.

	* src/de/intevation/printlayout/tools/BoxFactory.java:
		changed the pointer-events property of a box.
	
2007-02-13  Ludwig Reiter  <ludwig.reiter@intevation.de>

	added a help dialog.
	
	* src/de/intevation/printlayout/resources/about.html:
		New. The text of the about dialog.
	
	* src/de/intevation/printlayout/resources/info_de.html:
		New. The German text of the help dialog.
		
	* src/de/intevation/printlayout/resources/info.html:
		contains the English text of the help dialog.

	* src/de/intevation/printlayout/InfoDialog.java:
		Added a getLocalizedResource() method and used
		this to get the resource.
		Added a new constructor with variable resource.
		
	* src/de/intevation/printlayout/LayoutFrame.java:
		used the new constructor to display the info
		dialog and the about dialog.
	
2007-02-13  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* HowTo-Release.txt: Updated to include source code and
	refined here and there.

2007-02-13  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Doing the 0.9.0 release.

	* src/de/intevation/printlayout/InfoDialog.java,
	src/de/intevation/printlayout/resources/info.html: Version to 0.9.0.

	* Changes.txt: Summarized changes for 0.9.0.

2007-02-12  Ludwig Reiter  <ludwig.reiter@intevation.de>

	Third part of the text tool.
	A selected text can be changed by a text properties dialog
	and the dialog knows the old values.

	* src/de/intevation/printlayout/GUIUtils.java:
		added getFont and getText methods.

	* src/de/intevation/printlayout/LayoutFrame.java:
		The text dialog in the TextPropAction gets the
		old values of the text element.
	
	* src/de/intevation/printlayout/tools/TextDialog.java: