@@ -26,8 +26,16 @@ LayoutFrame.SaveSession=S&ave...
 LayoutFrame.LoadSession=&Load...
 LayoutFrame.View=&View
 LayoutFrame.ShowRuler=&Show Ruler
+PropertiesDialog.Ok=Ok
+PropertiesDialog.Cancel=Cancel
 BoxPropertiesDialog.Title=box properties
 BoxPropPanel.fillPatternCheckBox=use fill color
 BoxPropPanel.StrokeColorPanel=stroke color
 BoxPropPanel.StrokePanel=stroke
 BoxPropPanel.FillColorPanel=fill color
+TextDialog.Title=text properties
+TextDialog.FontFamily=font family
+TextDialog.Style=style
+TextDialog.Size=size
+TextDialog.Color=color
+TextDialog.Text=text
