@@ -31,8 +31,16 @@ LayoutFrame.SaveSession=S&peichern...
 LayoutFrame.LoadSession=&Laden...
 LayoutFrame.View=&Ansicht
 LayoutFrame.ShowRuler=&Lineal anzeigen
+PropertiesDialog.Ok=Ok
+PropertiesDialog.Cancel=Abbruch
 BoxPropertiesDialog.Title=Rechtecks-Eigenschaften
 BoxPropPanel.fillPatternCheckBox=f\u00FClle Rechteck
 BoxPropPanel.StrokeColorPanel=Linienfarbe
 BoxPropPanel.StrokePanel=Linieneigenschaften
 BoxPropPanel.FillColorPanel=F\u00FCllfarbe
+TextDialog.Title=Text Eigenschaften
+TextDialog.FontFamily=Schrift Familie
+TextDialog.Style=Stil
+TextDialog.Size=Gr\u00F6\u00DFe
+TextDialog.Color=Farbe
+TextDialog.Text=Text
